--- a/CodePulse/CodePulse/appsettings.json
+++ b/CodePulse/CodePulse/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CodePulseConnectionString": "Server=localhost; Database=CodePulseDb; TrustServerCertificate=True; Trusted_Connection=True"
+  },
+  "Jwt": {
+    "Key": "abcdefghijklmnopqursuvwxyzabcdefghijklmn", //40-bit string
+    "Issuer": "https://localhost:7262",
+    "Audience":  "https://localhost:4200"
   }
 }
